kustomize/apps/hbvusu/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hbvu
  name: hbvusu
  labels:
    app: hbvusu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hbvusu
  template:
    metadata:
      labels:
        app: hbvusu
    spec:    
      containers:
      - name: hbvusu
        image: nginx
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"        
        ports:
          - containerPort: 80
            name: "hbvusu"
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: nginx-storage
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: hbvusu-files
