kustomize/apps/hbvusu/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hbvu
  name: hbvusu
spec:
  selector:
    app: hbvusu
  ports:
    - protocol: TCP
      port: 80
      name: http
