kustomize/apps/hbvusu/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hbvusu
  namespace: hbvu
spec:
  ingressClassName: nginx
  rules:
    - host: home.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: hbvusu
                port:
                  number: 80
